# Raycaster

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
lib/: CMakeLists.txt
lib/lsoft/: CMakeLists.txt
lib/lsoft/inc/libsoft/: all.h  animation.h  colors.h  framebuffer.h  shapes.h
lib/lsoft/src/: animation.c  colors.c  framebuffer.c  shapes.c
src/: main.c
